# Glyph

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  build.ninja  compiler.sql  compiler_defs.sql  documentation.glyph  glyph.glyph  glyph.glyph.bak  glyph.sql  install.sh  test_comprehensive.expected
.github/workflows/: release.yml
Archives/documents/: asteroids-assessment-cont.md  debugging-improvements.md  error-messages-spec.md  glyph-programming-manual.md  (+8 more)
backends/: llvm.glyph  rust.glyph  wasm.glyph
crates/glyph-cli/: Cargo.toml
crates/glyph-cli/src/: build.rs  import.rs  main.rs
crates/glyph-codegen/: Cargo.toml
crates/glyph-codegen/src/: abi.rs  cranelift.rs  layout.rs  lib.rs  linker.rs  runtime.rs
crates/glyph-mir/: Cargo.toml
crates/glyph-mir/src/: closure.rs  ir.rs  lib.rs  lower.rs  match_compile.rs  mono.rs
documents/: TableOfContents.md  assessment.md  asteroids-assessment-cont.md  asteroids-feasibility.md  benchmark.md  bootstrapping.md  bugs.md  c-runtime-assessment.md  calling-glyph-from-c.md  closure-limitations.md  compiler-architecture.md  compiler-notes.md  compiler-smoke-tests.md  context-aware-inference.md  context-stashing.md  definition-kinds.md  disconnected-features.md  distribution.md  error-reporting.md  examples.md  extern-system-gaps.md  feature-assessment-maturity.md  feature-assessment.md  fuzzing.md  gled-assessment.md  gled-spec.md  glint-assessment.md  glint-spec.md  glyph-cli-spec.md  glyph-compiler-optimization.md  glyph-compiler-production-assessment.md  glyph-compiler-reference.md  glyph-self-hosted-programming-manual.md  glyph-spec.md  glyph-sqlite-driver.md  glyph-thread-safety.md  glyph-type-system-revisited.md  glyph-type-system-solutions.md  glyph-type-system.md  glyph-web-framework-spec.md  (+31 more)
glyph_src/: schema.sql
libraries/: async.glyph  async_ffi.c  cairo.glyph  cairo_ffi.c  diff.glyph  gmc.glyph  gtk.glyph  gtk_ffi.c  json.glyph  math.glyph  math_ffi.c  network.glyph  network_ffi.c  regex.glyph  scan.glyph  scan_ffi.c  sqlite3.glyph  stdlib.glyph  svg.glyph  thread.glyph  thread_ffi.c  web.glyph  web_ffi.c  x11.glyph  x11_ffi.c  xml.glyph  zip.glyph  zlib.glyph  zlib_ffi.c
scripts/: add_cli_defs.py
src/: schema.sql
(+1863 files in other folders)
