[workspace]
resolver = "2"
members = [
    "crates/glyph-db",
    "crates/glyph-parse",
    "crates/glyph-typeck",
    "crates/glyph-mir",
    "crates/glyph-codegen",
    "crates/glyph-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
blake3 = "1"
tiktoken-rs = "0.6"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"
